--- a/src/assets/stylesheets/header.scss
+++ b/src/assets/stylesheets/header.scss
@@ -1,16 +1,11 @@
-@import "header";
-@import "main_block";
-@import "menu";
-body{
-  padding: 0;
-  margin: 0;
+@mixin text-prop($color,$font-family,$font-size,$font-weight,$letter-spacing){
+  color: $color;
+  font-family: $font-family;
+  font-size: $font-size;
+  font-weight: $font-weight;
+  letter-spacing: $letter-spacing;
 }
-a{
-  text-decoration: none;
-}
-li{
-  list-style: none;
-}
+
 .header{
   background-color: white;
   display: flex;
@@ -29,9 +24,11 @@ li{
       &:last-child{
         padding: 49px 49px 49px 0;
       }
+      white-space: nowrap;
       .header_nav__items__links{
         @include text-prop(#3b3b3b,Aleo,14px,400,0.98px);
       }
+
     }
   }
 
