--- a/src/assets/stylesheets/base.scss
+++ b/src/assets/stylesheets/base.scss
@@ -2,10 +2,13 @@
 @import "main_block";
 @import "menu";
 @import "gallery";
+@import "footer";
+@import "dishes.scss";
 
 body{
   padding: 0;
   margin: 0;
+  overflow-x: hidden;
 }
 a{
   text-decoration: none;
@@ -20,7 +23,6 @@ li{
     margin-left:  14.16667%;
     padding: 55px 0 49px 0px;
   }
-
   .header_nav{
     display: inline-flex;
     margin-left:  22.75%;
